Fix text overflow in user's description in UserCard

--- a/styles/shared/user-name.scss
+++ b/styles/shared/user-name.scss
@@ -92,6 +92,7 @@
     .description {
       color: #666;
       margin: 7px 0 0 87px;
+      overflow: hidden;
     }
 
     .status {
